--- a/composer.json
+++ b/composer.json
@@ -91,11 +91,11 @@
 
     "require": {
         "php":                          ">=5.3.3",
-        "symfony/framework-bundle":     "~2.3|~3.0",
-        "symfony/security-bundle":      "~2.3|~3.0",
-        "symfony/options-resolver":     "~2.3|~3.0",
-        "symfony/form":                 "~2.3|~3.0",
-        "symfony/yaml":                 "~2.3|~3.0",
+        "symfony/framework-bundle":     "~2.3|~3.*",
+        "symfony/security-bundle":      "~2.3|~3.*",
+        "symfony/options-resolver":     "~2.3|~3.*",
+        "symfony/form":                 "~2.3|~3.*",
+        "symfony/yaml":                 "~2.3|~3.*",
         "kriswallsmith/buzz":           "~0.13"
     },
 
@@ -105,10 +105,10 @@
 
     "require-dev": {
         "doctrine/orm":                 "~2.3",
-        "symfony/property-access":      "~2.3|~3.0",
-        "symfony/validator":            "~2.3|~3.0",
-        "symfony/twig-bundle":          "~2.3|~3.0",
-        "symfony/phpunit-bridge":       "~2.7|~3.0",
+        "symfony/property-access":      "~2.3|~3.*",
+        "symfony/validator":            "~2.3|~3.*",
+        "symfony/twig-bundle":          "~2.3|~3.*",
+        "symfony/phpunit-bridge":       "~2.7|~3.*",
         "friendsofsymfony/user-bundle": "~1.3|~2.0",
         "phpunit/phpunit":              "~4.8|~5.0",
         "fabpot/php-cs-fixer":          "~1.11"
